# paoo

Step1/: CMakeLists.txt  tutorial.cxx
tema_1/: README.md
tema_1/src/: CMakeLists.txt  main.cpp
tema_1/src/include/: avion.h
tema_1/src/lib/: CMakeLists.txt  avion.cpp
tema_2/: README.md
tema_2/src/: CMakeLists.txt  main.cpp
tema_2/src/include/: Avion.h  AvionCargo.h  AvionComercial.h  Elicopter.h
tema_2/src/lib/: Avion.cpp  AvionCargo.cpp  AvionComercial.cpp  CMakeLists.txt  Elicopter.cpp
tema_3/: README.md
tema_3/src/: CMakeLists.txt  main.cpp
tema_3/src/include/: Avion.h  AvionCargo.h  AvionComercial.h  Elicopter.h  IAparatZbor.h
tema_3/src/lib/: Avion.cpp  AvionCargo.cpp  AvionComercial.cpp  Elicopter.cpp
